fix typo on Registration page

--- a/plugins/dynamix/Registration.page
+++ b/plugins/dynamix/Registration.page
@@ -77,7 +77,7 @@ Your *Trial* key includes all the functionality and device support of a *Pro* Re
 
 After your *Trial* key has reached expiration, your server **still functions normally** until the next time you <code>Stop</code> the array.
 
-At that point, you many either purchase a Registration key, or request a *Trial* extension.
+At that point, you may either purchase a Registration key, or request a *Trial* extension.
 </div>
 
 ***Trial*** key expires on:
