--- a/plugins/dynamix/Eth0.page
+++ b/plugins/dynamix/Eth0.page
@@ -70,13 +70,15 @@ $vlan_eth0 = [0];
 if (isset($eth0)) foreach ($eth0 as $key => $val) if (strpos($key,$vlan_id)===0) $vlan_eth0[] = substr($key,strlen($vlan_id));
 ?>
 <style>
-span.pin i{font-size:16px;cursor:pointer;}
-span.red{color:#E68A00;}
-span.blue{color:#00529B;}
-span.green{color:#4F8A10;}
+span.pin i{font-size:16px;cursor:pointer}
+span.red{color:#E68A00}
+span.blue{color:#00529B}
+span.green{color:#4F8A10}
 input.gap{margin-right:10px}
-div.shade-white{background-color:#F8F8F8;}
-div.shade-black{background-color:#0C0C0C;}
+div.shade-white{background-color:#F8F8F8}
+div.shade-black{background-color:#0C0C0C}
+select.slim{min-width:45px}
+input.slim{width:32px}
 </style>
 <script>
 <?if ($build):?>
@@ -311,9 +313,9 @@ function removeVLAN(element,disabled) {
   $(element).remove();
   $('#index-'+id[1]+'-0').find('select').first().trigger('change');
 }
-function disableForm(form,member) {
+function disableForm(form) {
   $(form).find('input,select').not('input[value="Done"]').prop('disabled',true);
-  if (member) $(form).find('input[name^="DESCRIPTION"],input[name^="#"]').prop('disabled',false);
+  $(form).find('input[name^="DESCRIPTION"],input[name^="#"]').prop('disabled',false);
 }
 var stopEvent = false;
 function exitCode(form,key) {
@@ -472,43 +474,33 @@ IP address assignment:
 
 <div class="eth0-ipv4-<?=$i?>" style="display:none" markdown="1">
 IPv4 address:
-: <input type="text" name="IPADDR:<?=$i?>" maxlength="15" value="<?=$eth0["IPADDR:$i"]?>" class="narrow" pattern="<?=$validIP4?>" title="IPv4 address A.B.C.D">
-
-> Greyed out when using automatic IP assignment. Otherwise specify here the IPv4 address of the system.
-
-IPv4 network mask:
-: <select name="NETMASK:<?=$i?>" size="1">
-  <?=mk_option($eth0["NETMASK:$i"], "255.255.0.0", "255.255.0.0");?>
-  <?=mk_option($eth0["NETMASK:$i"], "255.255.252.0", "255.255.252.0");?>
-  <?=mk_option($eth0["NETMASK:$i"], "255.255.254.0", "255.255.254.0");?>
-  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.0", "255.255.255.0");?>
-  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.128", "255.255.255.128");?>
-  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.192", "255.255.255.192");?>
-  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.224", "255.255.255.224");?>
-  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.240", "255.255.255.240");?>
-  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.248", "255.255.255.248");?>
-  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.252", "255.255.255.252");?>
+: <input type="text" name="IPADDR:<?=$i?>" maxlength="15" value="<?=$eth0["IPADDR:$i"]?>" class="narrow" pattern="<?=$validIP4?>" title="IPv4 address A.B.C.D">/ <select name="NETMASK:<?=$i?>" size="1" class="slim">
+  <?=mk_option($eth0["NETMASK:$i"], "255.255.0.0", "16");?>
+  <?=mk_option($eth0["NETMASK:$i"], "255.255.252.0", "22");?>
+  <?=mk_option($eth0["NETMASK:$i"], "255.255.254.0", "23");?>
+  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.0", "24");?>
+  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.128", "25");?>
+  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.192", "26");?>
+  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.224", "27");?>
+  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.240", "28");?>
+  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.248", "29");?>
+  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.252", "30");?>
   </select>
 
-> Greyed out when using automatic IP assignment. Otherwise specify here the associated network mask, by default 255.255.255.0 is selected.
+> Greyed out when using automatic IP assignment. Otherwise specify here the IPv4 address and mask of the system.
 
 IPv4 default gateway:
 : <input type="text" name="GATEWAY:<?=$i?>" maxlength="15" value="<?=$eth0["GATEWAY:$i"]?>" class="narrow" pattern="<?=$validIP4?>" title="IPv4 address A.B.C.D">
-  <input type="text" name="METRIC:<?=$i?>" min="1" max="9999" value="<?=$eth0["METRIC:$i"]?>" class="trim"><i class="fa fa-sort-numeric-asc"></i> <em>optional metric (lowest is preferred)</em>
+  <input type="text" name="METRIC:<?=$i?>" min="1" max="9999" value="<?=$eth0["METRIC:$i"]?>" class="slim"><i class="fa fa-sort-numeric-asc"></i> <em>optional metric (lowest is preferred)</em>
 
 > Greyed out when using automatic IP assignment. Otherwise specify here the IPv4 address of your router.
 
 </div>
 <div class="eth0-ipv6-<?=$i?>" style="display:none" markdown="1">
 IPv6 address:
-: <input type="text" name="IPADDR6:<?=$i?>" maxlength="39" value="<?=$eth0["IPADDR6:$i"]?>" pattern="<?=$validIP6?>" title="IPv6 address nnnn:xxxx::yyyy">
+: <input type="text" name="IPADDR6:<?=$i?>" maxlength="39" value="<?=$eth0["IPADDR6:$i"]?>" pattern="<?=$validIP6?>" title="IPv6 address nnnn:xxxx::yyyy">/ <input type="number" name="NETMASK6:<?=$i?>" min="1" max="128" value="<?=$eth0["NETMASK6:$i"]?>" class="slim">
 
 > Greyed out when using automatic IP assignment. Otherwise specify here the IPv6 address of the system.
-
-IPv6 prefix:
-: <input type="number" name="NETMASK6:<?=$i?>" min="1" max="128" value="<?=$eth0["NETMASK6:$i"]?>" class="trim">
-
-> Greyed out when using automatic IP assignment. Otherwise specify here the associated prefix value of 1 to 128.
 
 IPv6 default gateway:
 : <input type="text" name="GATEWAY6:<?=$i?>" maxlength="39" value="<?=$eth0["GATEWAY6:$i"]?>" pattern="<?=$validIP6?>" title="IPv6 address nnnn:xxxx::yyyy">
@@ -628,43 +620,33 @@ IP address assignment:
 
 <div class="eth0-ipv4-<?=$i?>" style="display:none" markdown="1">
 IPv4 address:
-: <input type="text" name="IPADDR:<?=$i?>" maxlength="15" value="<?=$eth0["IPADDR:$i"]?>" class="narrow" pattern="<?=$validIP4?>" title="IPv4 address A.B.C.D">
-
-> Greyed out when using automatic IP assignment. Otherwise specify here the IPv4 address of the system.
-
-IPv4 network mask:
-: <select name="NETMASK:<?=$i?>" size="1">
-  <?=mk_option($eth0["NETMASK:$i"], "255.255.0.0", "255.255.0.0");?>
-  <?=mk_option($eth0["NETMASK:$i"], "255.255.252.0", "255.255.252.0");?>
-  <?=mk_option($eth0["NETMASK:$i"], "255.255.254.0", "255.255.254.0");?>
-  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.0", "255.255.255.0");?>
-  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.128", "255.255.255.128");?>
-  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.192", "255.255.255.192");?>
-  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.224", "255.255.255.224");?>
-  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.240", "255.255.255.240");?>
-  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.248", "255.255.255.248");?>
-  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.252", "255.255.255.252");?>
+: <input type="text" name="IPADDR:<?=$i?>" maxlength="15" value="<?=$eth0["IPADDR:$i"]?>" class="narrow" pattern="<?=$validIP4?>" title="IPv4 address A.B.C.D">/ <select name="NETMASK:<?=$i?>" size="1" class="slim">
+  <?=mk_option($eth0["NETMASK:$i"], "255.255.0.0", "16");?>
+  <?=mk_option($eth0["NETMASK:$i"], "255.255.252.0", "22");?>
+  <?=mk_option($eth0["NETMASK:$i"], "255.255.254.0", "23");?>
+  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.0", "24");?>
+  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.128", "25");?>
+  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.192", "26");?>
+  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.224", "27");?>
+  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.240", "28");?>
+  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.248", "29");?>
+  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.252", "30");?>
   </select>
 
-> Greyed out when using automatic IP assignment. Otherwise specify here the associated network mask, by default 255.255.255.0 is selected.
+> Greyed out when using automatic IP assignment. Otherwise specify here the IPv4 address and mask of the system.
 
 IPv4 default gateway:
 : <input type="text" name="GATEWAY:<?=$i?>" maxlength="15" value="<?=$eth0["GATEWAY:$i"]?>" class="narrow" pattern="<?=$validIP4?>" title="IPv4 address A.B.C.D">
-  <input type="text" name="METRIC:<?=$i?>" min="1" max="9999" value="<?=$eth0["METRIC:$i"]?>" class="trim"><i class="fa fa-sort-numeric-asc"></i> <em>optional metric (lowest is preferred)</em>
+  <input type="text" name="METRIC:<?=$i?>" min="1" max="9999" value="<?=$eth0["METRIC:$i"]?>" class="slim"><i class="fa fa-sort-numeric-asc"></i> <em>optional metric (lowest is preferred)</em>
 
 > Greyed out when using automatic IP assignment. Otherwise specify here the IPv4 address of your router.
 
 </div>
 <div class="eth0-ipv6-<?=$i?>" style="display:none" markdown="1">
 IPv6 address:
-: <input type="text" name="IPADDR6:<?=$i?>" maxlength="39" value="<?=$eth0["IPADDR6:$i"]?>" pattern="<?=$validIP6?>" title="IPv6 address nnnn:xxxx::yyyy">
+: <input type="text" name="IPADDR6:<?=$i?>" maxlength="39" value="<?=$eth0["IPADDR6:$i"]?>" pattern="<?=$validIP6?>" title="IPv6 address nnnn:xxxx::yyyy">/ <input type="number" name="NETMASK6:<?=$i?>" min="1" max="128" value="<?=$eth0["NETMASK6:$i"]?>" class="slim">
 
-> Greyed out when using automatic IP assignment. Otherwise specify here the IPv6 address of the system.
-
-IPv6 prefix:
-: <input type="number" name="NETMASK6:<?=$i?>" min="1" max="128" value="<?=$eth0["NETMASK6:$i"]?>" class="trim">
-
-> Greyed out when using automatic IP assignment. Otherwise specify here the associated prefix value of 1 to 128.
+> Greyed out when using automatic IP assignment. Otherwise specify here the IPv6 address and prefix of the system.
 
 IPv6 default gateway:
 : <input type="text" name="GATEWAY6:<?=$i?>" maxlength="39" value="<?=$eth0["GATEWAY6:$i"]?>" pattern="<?=$validIP6?>" title="IPv6 address nnnn:xxxx::yyyy">
@@ -720,43 +702,33 @@ IP address assignment:
 
 <div class="eth0-ipv4-INDEX" style="display:none" markdown="1">
 IPv4 address:
-: <input type="text" name="IPADDR:INDEX" maxlength="15" value="<?=$eth0["IPADDR:INDEX"]?>" class="narrow" pattern="<?=$validIP4?>" title="IPv4 address A.B.C.D">
-
-> Greyed out when using automatic IP assignment or NONE assignment. Otherwise specify here the IPv4 address of the system.
-
-IPv4 network mask:
-: <select name="NETMASK:INDEX" size="1">
-  <?=mk_option($eth0["NETMASK:INDEX"], "255.255.0.0", "255.255.0.0");?>
-  <?=mk_option($eth0["NETMASK:INDEX"], "255.255.252.0", "255.255.252.0");?>
-  <?=mk_option($eth0["NETMASK:INDEX"], "255.255.254.0", "255.255.254.0");?>
-  <?=mk_option($eth0["NETMASK:INDEX"], "255.255.255.0", "255.255.255.0");?>
-  <?=mk_option($eth0["NETMASK:INDEX"], "255.255.255.128", "255.255.255.128");?>
-  <?=mk_option($eth0["NETMASK:INDEX"], "255.255.255.192", "255.255.255.192");?>
-  <?=mk_option($eth0["NETMASK:INDEX"], "255.255.255.224", "255.255.255.224");?>
-  <?=mk_option($eth0["NETMASK:INDEX"], "255.255.255.240", "255.255.255.240");?>
-  <?=mk_option($eth0["NETMASK:INDEX"], "255.255.255.248", "255.255.255.248");?>
-  <?=mk_option($eth0["NETMASK:INDEX"], "255.255.255.252", "255.255.255.252");?>
+: <input type="text" name="IPADDR:INDEX" maxlength="15" value="<?=$eth0["IPADDR:INDEX"]?>" class="narrow" pattern="<?=$validIP4?>" title="IPv4 address A.B.C.D">/ <select name="NETMASK:INDEX" size="1" class="slim">
+  <?=mk_option($eth0["NETMASK:INDEX"], "255.255.0.0", "16");?>
+  <?=mk_option($eth0["NETMASK:INDEX"], "255.255.252.0", "22");?>
+  <?=mk_option($eth0["NETMASK:INDEX"], "255.255.254.0", "23");?>
+  <?=mk_option($eth0["NETMASK:INDEX"], "255.255.255.0", "24", "selected");?>
+  <?=mk_option($eth0["NETMASK:INDEX"], "255.255.255.128", "25");?>
+  <?=mk_option($eth0["NETMASK:INDEX"], "255.255.255.192", "26");?>
+  <?=mk_option($eth0["NETMASK:INDEX"], "255.255.255.224", "27");?>
+  <?=mk_option($eth0["NETMASK:INDEX"], "255.255.255.240", "28");?>
+  <?=mk_option($eth0["NETMASK:INDEX"], "255.255.255.248", "29");?>
+  <?=mk_option($eth0["NETMASK:INDEX"], "255.255.255.252", "30");?>
   </select>
 
-> Greyed out when using automatic IP assignment or NONE assignment. Otherwise specify here the associated network mask, by default 255.255.255.0 is selected.
+> Greyed out when using automatic IP assignment or NONE assignment. Otherwise specify here the IPv4 address and mask of the system.
 
 IPv4 default gateway:
 : <input type="text" name="GATEWAY:INDEX" maxlength="15" value="<?=$eth0["GATEWAY:INDEX"]?>" class="narrow" pattern="<?=$validIP4?>" title="IPv4 address A.B.C.D">
-  <input type="text" name="METRIC:INDEX" min="1" max="9999" value="<?=$eth0["METRIC:INDEX"]?>" class="trim"><i class="fa fa-sort-numeric-asc"></i> <em>optional metric (lowest is preferred)</em>
+  <input type="text" name="METRIC:INDEX" min="1" max="9999" value="<?=$eth0["METRIC:INDEX"]?>" class="slim"><i class="fa fa-sort-numeric-asc"></i> <em>optional metric (lowest is preferred)</em>
 
 > Greyed out when using automatic IP assignment. Otherwise specify here the IPv4 address of your router.
 
 </div>
 <div class="eth0-ipv6-INDEX" style="display:none" markdown="1">
 IPv6 address:
-: <input type="text" name="IPADDR6:INDEX" maxlength="39" value="<?=$eth0["IPADDR6:INDEX"]?>" pattern="<?=$validIP6?>" title="IPv6 address nnnn:xxxx::yyyy">
+: <input type="text" name="IPADDR6:INDEX" maxlength="39" value="<?=$eth0["IPADDR6:INDEX"]?>" pattern="<?=$validIP6?>" title="IPv6 address nnnn:xxxx::yyyy">/ <input type="number" name="NETMASK6:INDEX" min="1" max="128" value="<?=$eth0["NETMASK6:INDEX"]?>" class="slim">
 
-> Greyed out when using automatic IP assignment. Otherwise specify here the IPv6 address of the system.
-
-IPv6 prefix:
-: <input type="number" name="NETMASK6:INDEX" min="1" max="128" value="<?=$eth0["NETMASK6:INDEX"]?>" class="trim">
-
-> Greyed out when using automatic IP assignment. Otherwise specify here the associated prefix value of 1 to 128.
+> Greyed out when using automatic IP assignment. Otherwise specify here the IPv6 address and prefix of the system.
 
 IPv6 default gateway:
 : <input type="text" name="GATEWAY6:INDEX" maxlength="39" value="<?=$eth0["GATEWAY6:INDEX"]?>" pattern="<?=$validIP6?>" title="IPv6 address nnnn:xxxx::yyyy">
