--- a/plugins/dynamix/Eth0.page
+++ b/plugins/dynamix/Eth0.page
@@ -219,24 +219,15 @@ function checkNetworkSettings(form,index,open) {
   var protocol = $(form).find('select[name="PROTOCOL:'+index+'"]').val() || 'ipv4';
   if (protocol != 'ipv6') {
     $(form).find('input[name="IPADDR:'+index+'"]').prop('disabled',disabled).prop('required',!disabled);
-    var netmask = $(form).find('select[name="NETMASK:'+index+'"]');
-    var gateway = $(form).find('input[name="GATEWAY:'+index+'"]');
-    netmask.prop('disabled',disabled);
-    gateway.prop('disabled',disabled);
-    if (!disabled) {
-      var none = netmask.find('option[value="none"]');
-      if (none.length) {netmask.val('255.255.255.0'); none.remove();}
-    }
+    $(form).find('select[name="NETMASK:'+index+'"]').prop('disabled',disabled);
+    $(form).find('input[name="GATEWAY:'+index+'"]').prop('disabled',disabled);
   }
   if (protocol != 'ipv4') {
     $(form).find('input[name="IPADDR6:'+index+'"]').prop('disabled',disabled).prop('required',!disabled);
-    var netmask6 = $(form).find('input[name="NETMASK6:'+index+'"]');
-    var gateway6 = $(form).find('input[name="GATEWAY6:'+index+'"]');
-    var privacy6 = $(form).find('select[name="PRIVACY6:'+index+'"]');
-    netmask6.prop('disabled',disabled).prop('required',!disabled);
-    gateway6.prop('disabled',disabled);
-    privacy6.prop('disabled',!disabled);
-    if (!open) privacy6.val(disabled ? 0 : 2);
+    $(form).find('input[name="NETMASK6:'+index+'"]').prop('disabled',disabled).prop('required',!disabled);
+    $(form).find('input[name="GATEWAY6:'+index+'"]').prop('disabled',disabled);
+    var privacy = $(form).find('select[name="PRIVACY6:'+index+'"]');
+    privacy.prop('disabled',!disabled); if (!open) privacy.val(disabled ? 0 : 2);
   }
   if (dns && index==0) {
     if (!open) form.DHCP_KEEPRESOLV.value = disabled ? 'no' : 'yes';
@@ -478,7 +469,7 @@ IPv4 address:
   <?=mk_option($eth0["NETMASK:$i"], "255.255.0.0", "16");?>
   <?=mk_option($eth0["NETMASK:$i"], "255.255.252.0", "22");?>
   <?=mk_option($eth0["NETMASK:$i"], "255.255.254.0", "23");?>
-  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.0", "24");?>
+  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.0", "24", $eth0["IPADDR:$i"]?"":"selected");?>
   <?=mk_option($eth0["NETMASK:$i"], "255.255.255.128", "25");?>
   <?=mk_option($eth0["NETMASK:$i"], "255.255.255.192", "26");?>
   <?=mk_option($eth0["NETMASK:$i"], "255.255.255.224", "27");?>
@@ -624,7 +615,7 @@ IPv4 address:
   <?=mk_option($eth0["NETMASK:$i"], "255.255.0.0", "16");?>
   <?=mk_option($eth0["NETMASK:$i"], "255.255.252.0", "22");?>
   <?=mk_option($eth0["NETMASK:$i"], "255.255.254.0", "23");?>
-  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.0", "24");?>
+  <?=mk_option($eth0["NETMASK:$i"], "255.255.255.0", "24", $eth0["IPADDR:$i"]?"":"selected");?>
   <?=mk_option($eth0["NETMASK:$i"], "255.255.255.128", "25");?>
   <?=mk_option($eth0["NETMASK:$i"], "255.255.255.192", "26");?>
   <?=mk_option($eth0["NETMASK:$i"], "255.255.255.224", "27");?>
