Minor text change.

--- a/plugins/dynamix/Registration.page
+++ b/plugins/dynamix/Registration.page
@@ -40,7 +40,7 @@ Your server will not be usable until you purchase a Registration key or install 
 key provides all the functionality of a *Pro* Registration key.
 
 Registration keys are bound to your USB Flash boot device serial number (GUID).  Please use a high quality name brand device
-between 1GB and 32GB in size.
+at least 1GB in size.
 
 Note: USB memory card readers are generally **not** supported because most do not present unique serial numbers.
 
