--- a/plugins/dynamix/styles/default-azure.css
+++ b/plugins/dynamix/styles/default-azure.css
@@ -9,9 +9,9 @@ a:hover{text-decoration:underline}
 a{color:#486DBA;text-decoration:none}
 a.none{color:#606E7F}
 a.img{text-decoration:none;border:none}
-a.info{position:relative;z-index:1}
-a.info span{display:none}
-a.info:hover span{display:block;white-space:nowrap;font-variant:small-caps;position:absolute;left:8px;color:#4F4F4F;font-size:13px;line-height:20px;padding:5px 8px;border:1px solid #42453E;border-radius:3px;background-color:#EDEAEF}
+a.info{position:relative}
+a.info span{display:none;white-space:nowrap;font-variant:small-caps;position:absolute;top:16px;left:12px;color:#4F4F4F;font-size:13px;line-height:20px;padding:5px 8px;border:1px solid #42453E;border-radius:3px;background-color:#EDEAEF}
+a.info:hover span{display:block;z-index:1}
 a.nohand{cursor:default}
 i.spacing{margin-left:0;margin-right:10px}
 i.icon{margin-right:4px}
@@ -223,7 +223,9 @@ span.three{margin-left:-20px}
 span.tub{margin-right:8px;font-size:24px;cursor:pointer}
 span.score{font-size:11px;color:#FFFFFF;position:absolute}
 span#dropbox{background:none;line-height:60px;margin-right:20px}
-i.padlock{margin-left:8px;cursor:help}
+i.padlock{margin-right:8px;cursor:default}
+i.nolock{visibility:hidden;margin-right:8px}
+i.lock{margin-left:8px;cursor:default}
 img.icon{margin:-3px 4px 0 0}
 img.list{width:auto;max-width:48px;height:48px}
 div.content{position:absolute;top:0;left:0;width:100%;padding-bottom:30px;z-index:-1;clear:both}
